--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,7 +35,12 @@
 
             <hr class="sidebar-divider my-0">
 
-
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Index", "Home")">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Anasayfa</span>
+                </a>
+            </li>
         </ul>
 
         <div>
